objects/Site_Request_Form_Settings__c/Site_Request_Form_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Site Request Form Settings</label>
</CustomObject>