objects/Site_Request_Form_Settings__c/fields/CustomText__c.field-meta.xml
<CustomField>
    <fullName>CustomText__c</fullName>
    <defaultValue>&apos;Please fill all fields&apos;</defaultValue>
    <label>CustomText</label>
    <type>TextArea</type>
</CustomField>