objects/Site_Request_Form_Settings__c/fields/Dummy_Check_Box_1__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Check_Box_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dummy Check Box 1</label>
    <type>Checkbox</type>
</CustomField>