objects/Site_Request_Form_Settings__c/fields/Dummy_Checkbox_2__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Checkbox_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dummy Checkbox 2</label>
    <type>Checkbox</type>
</CustomField>