objects/Site_Request_Form_Settings__c/fields/Dummy_Text_Area_2__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Text_Area_2__c</fullName>
    <label>Dummy Text Area 2</label>
    <type>TextArea</type>
</CustomField>