objects/Site_Request_Form_Settings__c/fields/File_Section_custom_text__c.field-meta.xml
<CustomField>
    <fullName>File_Section_custom_text__c</fullName>
    <label>File Section custom text</label>
    <type>TextArea</type>
</CustomField>