objects/Site_Request_Form_Settings__c/fields/Files_Section__c.field-meta.xml
<CustomField>
    <fullName>Files_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Files Section Accessible</label>
    <type>Checkbox</type>
</CustomField>