objects/Site_Request_Form_Settings__c/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <defaultValue>&apos;https://jsbaseorg-dev-ed--c.na94.content.force.com/servlet/servlet.ImageServer?id=015A0000001jx0S&amp;oid=00DA0000000Cir8&amp;lastMod=1568273135000&apos;</defaultValue>
    <label>Org URL</label>
    <type>Url</type>
</CustomField>