objects/Site_Request_Form_Settings__c/fields/Site_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Header_Name__c</fullName>
    <defaultValue>&quot;Job Request Form&quot;</defaultValue>
    <label>Site Header Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>