objects/Site_Request_Form_Settings__c/fields/Width_of_the_Image__c.field-meta.xml
<CustomField>
    <fullName>Width_of_the_Image__c</fullName>
    <defaultValue>&quot;120&quot;</defaultValue>
    <label>Width of the Image</label>
    <length>3</length>
    <type>Text</type>
</CustomField>